update style responsive element video panduan and update button text buku panduan

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -4951,6 +4951,10 @@ main.main-ppdb {
     width: 100px !important;
     height: 100px !important;
   }
+
+  .video-panduan-element-2 {
+    right: -15px !important;
+  }
 }
 
 @media (max-width: 575px) {
