add section panduan dan proposal

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -3967,7 +3967,7 @@ main.main-ppdb {
   }
 
   .awssld__wrapper {
-    height: 75vh !important;
+    height: 600px !important;
   }
 
   .awssld__bullets {
@@ -4183,6 +4183,9 @@ main.main-ppdb {
   .lg-fs-12-ss {
     font-size: 12px !important;
   }
+  .lg-fs-10-ss {
+    font-size: 10px !important;
+  }
 
   // width
   .lg-w-auto {
@@ -4308,11 +4311,11 @@ main.main-ppdb {
     top: -125px;
   }
 
-  .slider-fitur {
-    .awssld__wrapper {
-      height: 80vh !important;
-    }
-  }
+  // .slider-fitur {
+  //   .awssld__wrapper {
+  //     height: 80vh !important;
+  //   }
+  // }
 
   .benner-event {
     top: 70px !important;
@@ -4347,6 +4350,9 @@ main.main-ppdb {
   }
   .md-fs-12-ss {
     font-size: 12px !important;
+  }
+  .md-fs-10-ss {
+    font-size: 10px !important;
   }
 
   // width
@@ -4707,6 +4713,9 @@ main.main-ppdb {
   }
   .sm-fs-12-ss {
     font-size: 12px !important;
+  }
+  .sm-fs-10-ss {
+    font-size: 10px !important;
   }
 
   // width
